--- a/Source/HolyBird/GUI/Customer_Detail.xaml
+++ b/Source/HolyBird/GUI/Customer_Detail.xaml
@@ -11,8 +11,9 @@
 
     <Grid>
         <TextBlock TextAlignment="Center" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="26" FontWeight="Bold" Width="926" Margin="0,20,0,0">Chi tiết</TextBlock>
-        <TextBlock Visibility="Collapsed" TextAlignment="Center" Name="noDetail"  HorizontalAlignment="Center" VerticalAlignment="Top" Margin="7,70,0,0" Width="158">Không có chi tiết để xem</TextBlock>
-        <ListView ScrollViewer.HorizontalScrollBarVisibility="Hidden" ScrollViewer.VerticalScrollBarVisibility="Hidden" x:Name="listRoomOrder"  Margin="15,70,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Height="440" Width="886">
+        <TextBlock  TextAlignment="Center" Name="noDetail"  HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,150,0,0" Width="158">Không có chi tiết để xem</TextBlock>
+        <Button x:Name="removeDetailTransaction_name" Click="removeDetailTransaction" IsEnabled="False" Background="#dc3545" BorderBrush="#dc3545" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,70,15,0">Hủy chi tiết giao dịch</Button>
+        <ListView MouseUp="SelectItemRemove" ScrollViewer.HorizontalScrollBarVisibility="Hidden" ScrollViewer.VerticalScrollBarVisibility="Hidden" x:Name="listRoomOrder"  Margin="15,114,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Height="396" Width="886">
             <ListView.ItemTemplate >
                 <DataTemplate DataType="DetailRoomReservedDTO">
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Top" Width="870">
