--- a/Source/HolyBird/GUI/Bill.xaml
+++ b/Source/HolyBird/GUI/Bill.xaml
@@ -10,24 +10,25 @@
         Loaded="Window_Loaded_Bill"
        Title="HolyBird - Hóa đơn" Height="537" Width="926"  WindowStartupLocation="CenterScreen" ResizeMode="CanMinimize">
     <Grid Background="#f8f8f8">
+
         <TextBlock FontSize="26" FontWeight="Bold" TextAlignment="Center" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,15,0,0" Width="895">Hóa đơn thanh toán</TextBlock>
         <TextBlock TextAlignment="Center" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,50,0,0" FontSize="20" FontWeight="Bold" Width="895">HolyBird Resort</TextBlock>
         <TextBox IsReadOnly="True"
-                      Style="{StaticResource MaterialDesignFloatingHintTextBox}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="160" FontSize="13" Margin="20,147,0,0">
+                 Name="IdTransaction_name"
+            Style="{StaticResource MaterialDesignFloatingHintTextBox}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="160" FontSize="13" Margin="25,147,0,0" RenderTransformOrigin="-0.525,0.5">
             <materialDesign:HintAssist.Hint>
                 <StackPanel
-                              Orientation="Horizontal"
-                              Margin="-2 0 0 0">
+                    Orientation="Horizontal"
+                    Margin="-2 0 0 0">
                     <materialDesign:PackIcon
-                                    Kind="Barcode" />
-                    <TextBlock>
-                                        <Run Text=" Mã hóa đơn"/>
-                    </TextBlock>
+                        Kind="Barcode" />
+                    <TextBlock><Run Text=" Mã đơn"/></TextBlock>
                 </StackPanel>
             </materialDesign:HintAssist.Hint>
         </TextBox>
         <TextBox IsReadOnly="True"
-            Style="{StaticResource MaterialDesignFloatingHintTextBox}" HorizontalAlignment="Right" VerticalAlignment="Top" Width="160" FontSize="13" Margin="0,147,245,0" RenderTransformOrigin="0.488,0.47">
+                 Name="IdMaDoan_name"
+            Style="{StaticResource MaterialDesignFloatingHintTextBox}" HorizontalAlignment="Right" VerticalAlignment="Top" Width="160" FontSize="13" Margin="0,147,250,0" RenderTransformOrigin="0.488,0.47">
             <materialDesign:HintAssist.Hint>
                 <StackPanel
                     Orientation="Horizontal"
@@ -38,7 +39,7 @@
                 </StackPanel>
             </materialDesign:HintAssist.Hint>
         </TextBox>
-        <TextBox IsReadOnly="True"
+        <TextBox IsReadOnly="True" Name="nameLeader_name"
             Style="{StaticResource MaterialDesignFloatingHintTextBox}" HorizontalAlignment="Right" VerticalAlignment="Top" Width="200" FontSize="13" Margin="0,147,25,0">
             <materialDesign:HintAssist.Hint>
                 <StackPanel
@@ -112,7 +113,10 @@
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
-        <TextBox IsReadOnly="True"
+        <TextBox
+            
+            x:Name="sumMoney_name"
+            IsReadOnly="True"
                  Text="312312312"
                  Foreground="#dc3545"
                    materialDesign:HintAssist.Foreground="#dc3545"
@@ -123,11 +127,11 @@
                     Orientation="Horizontal"
                     Margin="-2 0 0 0">
                     <materialDesign:PackIcon
-                        Kind="Barcode" Height="24" />
+                        Kind="Coin" Height="24" />
                     <TextBlock><Run Text=" Tổng tiền"/></TextBlock>
                 </StackPanel>
             </materialDesign:HintAssist.Hint>
         </TextBox>
-        <Button Click="payBill" Panel.ZIndex="2" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,15,25,0">Thanh toán</Button>
+        <Button x:Name="payBill_name" Click="PayBill" Panel.ZIndex="2" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,15,25,0" Width="145" Padding="0">Thanh toán</Button>
     </Grid>
 </Window>
