--- a/Source/HolyBird/GUI/Employee_Payment.xaml
+++ b/Source/HolyBird/GUI/Employee_Payment.xaml
@@ -12,7 +12,9 @@
 
     <Grid>
         <TextBlock TextAlignment="Center" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="26" FontWeight="Bold" Width="926" Margin="0,20,0,0">Thống kê thiệt hại</TextBlock>
-        <TextBox  Text="{Binding MaDoan}"
+        <TextBox
+            Name="searchIdTeam_name"
+            Text="{Binding MaDoan}"
                       Style="{StaticResource MaterialDesignFloatingHintTextBox}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="186" FontSize="13" Margin="25,73,0,0">
             <materialDesign:HintAssist.Hint>
                 <StackPanel
@@ -26,15 +28,16 @@
                 </StackPanel>
             </materialDesign:HintAssist.Hint>
         </TextBox>
-        <Button Click="searchRoomReserved" Background="#ffc107" Foreground="#212529" BorderBrush="#ffc107" Margin="216,79,0,0" Padding="0" Width="32" HorizontalAlignment="Left" VerticalAlignment="Top">
+        <Button IsDefault="True" Click="searchRoomReserved" Background="#ffc107" Foreground="#212529" BorderBrush="#ffc107" Margin="216,79,0,0" Padding="0" Width="32" HorizontalAlignment="Left" VerticalAlignment="Top">
             <materialDesign:PackIcon Kind="Search"></materialDesign:PackIcon>
         </Button>
-        <Button Click="exportBill" Margin="0,79,25,0" HorizontalAlignment="Right" VerticalAlignment="Top">
+        <Button IsEnabled="False" Name="exportBill_name" Click="exportBill" Margin="0,79,25,0" HorizontalAlignment="Right" VerticalAlignment="Top">
             <StackPanel Orientation="Horizontal">
                 <materialDesign:PackIcon Kind="TicketPercent" Padding="0" Margin="0,0.25,5,0" HorizontalAlignment="Center" Height="19"/>
                 <TextBlock>Xuất hóa đơn</TextBlock>
             </StackPanel>
         </Button>
+        <TextBlock x:Name="noTransaction" Visibility="Collapsed" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,162,0,0">Không có cập nhật thiệt hại phù hợp</TextBlock>
         <ListView ScrollViewer.HorizontalScrollBarVisibility="Hidden" ScrollViewer.VerticalScrollBarVisibility="Hidden" x:Name="listDamages"  Margin="20,131,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Height="378" Width="881">
             <ListView.ItemTemplate >
                 <DataTemplate DataType="DamagesDTO">
