--- a/Source/HolyBird/GUI/Employee_SearchActivity.xaml
+++ b/Source/HolyBird/GUI/Employee_SearchActivity.xaml
@@ -8,9 +8,6 @@
       d:DesignHeight="537" d:DesignWidth="926"
       xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
       Title="Search" Loaded="Window_Loaded_Transactions">
-    <Page.Resources>
-        <local:StatusOfRoomConverter x:Key="StatusOfRoomConverter"/>
-    </Page.Resources>
     <Grid>
         <TextBlock FontSize="26" FontWeight="Bold" HorizontalAlignment="Left" TextAlignment="Center"  VerticalAlignment="Top" Width="926" Margin="0,10,0,0">Quản lí hoạt động</TextBlock>
         <Button Name="acceptRoom_name" IsEnabled="False" Click="AcceptRoom" Background="#28a745" BorderBrush="#28a745" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="775,50,0,0" Padding="0" Width="126">
@@ -25,6 +22,7 @@
                 <TextBlock TextAlignment="Right" Width="73">Hủy Phòng</TextBlock>
             </StackPanel>
         </Button>
+        <TextBlock Visibility="Collapsed" x:Name="noActivity" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0,110,0,0">Không có hoạt động</TextBlock>
         <ListView MouseUp="selectItem" ScrollViewer.VerticalScrollBarVisibility="Hidden" ScrollViewer.HorizontalScrollBarVisibility="Hidden" x:Name="listTransaction"  Margin="20,87,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Height="438" Width="881">
             <ListView.ItemTemplate >
                 <DataTemplate DataType="ActivityDTO">
@@ -43,7 +41,7 @@
                                 </StackPanel>
                             </materialDesign:HintAssist.Hint>
                         </TextBox>
-                        <TextBox Text="{Binding TrangThai,Converter={StaticResource StatusOfRoomConverter}}" IsReadOnly="True"
+                        <TextBox Text="{Binding TrangThai}" IsReadOnly="True"
                             Style="{StaticResource MaterialDesignFloatingHintTextBox}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="329" Margin="10,0,0,0" FontSize="13">
                             <materialDesign:HintAssist.Hint>
                                 <StackPanel
@@ -51,7 +49,7 @@
                                     Margin="-2 0 0 0">
                                     <materialDesign:PackIcon
                                     Kind="Payment" />
-                                    <TextBlock><Run Text=" TrạngThái"/></TextBlock>
+                                    <TextBlock><Run Text=" Trạng Thái"/></TextBlock>
                                 </StackPanel>
                             </materialDesign:HintAssist.Hint>
                         </TextBox>
